--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <div class="header--content">        
           <div class="logo">
-            <div class="logoimg"><img src="./assets/images/favicon.ico"></div>
+            <div class="logoimg"><a href="index.html"><img src="./assets/images/favicon.ico"></a></div>
           </div>
 
           <div class="menu">
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="header-store-img">
-                    <div class="store-img"><img src="./assets/images/icon-bag.svg" alt=""></div>
+                    <div class="store-img"><a href="index.html"><img src="./assets/images/icon-bag.svg" alt=""></a></div>
                 </div>
             </div>
         </div>
